Added a stylesheet and finished the pages

--- a/recipes/mashedpotatoes.html
+++ b/recipes/mashedpotatoes.html
@@ -4,39 +4,49 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../styles.css">
     <title>Mashed Potatoes Recipe</title>
 </head>
 <body>
-    <h1>Mashed Potatoes</h1>
+    <div class="recipe-name">
+        <h1>Mashed Potatoes</h1>
+    </div>
 
-    <img src="../images/mashedpo.jpg" width="300" height="300">
+    <div id="imgmashed">
+        <img src="../images/mashedpo.jpg"/>
+    </div>
 
-    <h2>Description</h2>
+    <div id="descr">
+        <h2>Description</h2>
 
-    <p>This is an American dish that includes homestyle buttery mashed potatoes, pork chops, </p>
-    <p>sweet corn, gravy and cheesy chopped beans. It tastes like an absolute party!</p>
+        <p>This is an American dish that includes homestyle buttery mashed potatoes, pork chops, </p>
+        <p>sweet corn, gravy and cheesy chopped beans. It tastes like an absolute party!</p>
+    </div>
 
-    <h2>Ingredients</h2>
+    <div id="ingred">
+        <h2>Ingredients</h2>
 
-    <ul>
-        <li>Packet of ready to make homemade buttery mashed potatoes.</li>
-        <li>Pork chops.</li>
-        <li>Can of chopped beans.</li>
-        <li>Packet of sweet corn.</li>
-        <li>Packet of gravy.</li>
-        <li>American cheddar cheese slices.</li>
-    </ul>
+            <ul>
+                <li>Packet of ready to make homemade buttery mashed potatoes.</li>
+                <li>Pork chops.</li>
+                <li>Can of chopped beans.</li>
+                <li>Packet of sweet corn.</li>
+                <li>Packet of gravy.</li>
+                <li>American cheddar cheese slices.</li>
+            </ul>
+    </div>
 
-    <h2>Steps</h2>
+    <div id="stps">
+        <h2>Steps</h2>
 
-    <ol>
-        <li>Mix the homemade mashed potatoes with water according to the instructions on the package.</li>
-        <li>Cook the pork chops for 10 minutes in a pan and then proceed to cook them in an oven for 30-45 minutes on 350 fahrenheit.</li>
-        <li>Add the beans to a pot with 2 slices of cheddar cheese and cook until everything is mixed and the cheese has melted.</li>
-        <li>Warm the gravy in a microwave until it's hot.</li>
-        <li>As soon as the pork chops are done cooking, add everything onto a plate and pour the gravy atop.</li>
-        <li>Enjoy!</li>
-    </ol>
-
+            <ol>
+                <li>Mix the homemade mashed potatoes with water according to the instructions on the package.</li>
+                <li>Cook the pork chops for 10 minutes in a pan and then proceed to cook them in an oven for 30-45 minutes on 350 fahrenheit.</li>
+                <li>Add the beans to a pot with 2 slices of cheddar cheese and cook until everything is mixed and the cheese has melted.</li>
+                <li>Warm the gravy in a microwave until it's hot.</li>
+                <li>As soon as the pork chops are done cooking, add everything onto a plate and pour the gravy atop.</li>
+                <li>Enjoy!</li>
+            </ol>
+    </div>
 </body>
 </html>
